--- a/src/index.html
+++ b/src/index.html
@@ -21,26 +21,8 @@
         </div>
     </header>
     <section class="hero is-fullheight">
-        <div class="columns">
-            <div class="column">
-                <!-- {{ team }} -->
-                <div class="card">
-                    <header class="card-header">
-                        <h2 class="card-header-title">
-                            {{ name }}
-                        </h2>
-                        
-                    </header>
-                    <h3><i class="fas fa-chalkboard-teacher"></i>{{ position }}</h3>
-                    <div class="card-content">
-                        <ul class="employee-content">
-                            <li class="employee-content-item">ID: {{ id }}</li>
-                            <li class="employee-content-item">Email: <a href="mailto:{{ email }}"></a>{{ id }}</li>
-                            <li class="employee-content-item">Office number: {{ officeNumber }} {{ id }}</li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
+        <div class="columns is-multiline">
+            <!-- {{ team }} -->
         </div>
     </section>
 </body>
