--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
     </header>
     <section class="hero is-fullheight">
         <div class="columns is-multiline">
-            <!-- {{ team }} -->
+            {{ team }}
         </div>
     </section>
 </body>
