--- a/src/engineer.html
+++ b/src/engineer.html
@@ -1,11 +1,11 @@
 <div class="column is-half">
     <div class="card">
         <header class="card-header">
-            <h2 class="card-header-title">
+            <h2 class="card-header-title card-header-engineer">
                 {{ name }}
             </h2> 
         </header>
-        <h3><i class="fas fa-laptop-code"></i>{{ position }}</h3>
+        <h3><i class="fas fa-laptop-code"></i> {{ position }}</h3>
         <div class="card-content">
             <ul class="employee-content">
                 <li class="employee-content-item">ID: {{ id }}</li>
