--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
     <title>The Dream Team</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css">
+    <link rel="stylesheet" href="../src/style.css">
 
 </head>
 <body>
