--- a/src/intern.html
+++ b/src/intern.html
@@ -1,11 +1,11 @@
-<div class="column-is half">
+<div class="column is-half">
     <div class="card">
         <header class="card-header">
-            <h2 class="card-header-title">
+            <h2 class="card-header-title card-header-intern">
                 {{ name }}
             </h2> 
         </header>
-        <h3><i class="fas fa-university"></i>{{ position }}</h3>
+        <h3><i class="fas fa-university"></i> {{ position }}</h3>
         <div class="card-content">
             <ul class="employee-content">
                 <li class="employee-content-item">ID: {{ id }}</li>
