--- a/src/manager.html
+++ b/src/manager.html
@@ -1,12 +1,12 @@
 <div class="column is-full">
     <div class="card">
         <header class="card-header">
-            <h2 class="card-header-title">
+            <h2 class="card-header-title card-header-manager">
                 {{ name }}
             </h2>
             
         </header>
-        <h3><i class="fas fa-chalkboard-teacher"></i>{{ position }}</h3>
+        <h3><i class="fas fa-chalkboard-teacher"></i> {{ position }}</h3>
         <div class="card-content">
             <ul class="employee-content">
                 <li class="employee-content-item">ID: {{ id }}</li>
