fixed an issue where email wouldnt appear as link

--- a/src/engineer.html
+++ b/src/engineer.html
@@ -9,7 +9,7 @@
         <div class="card-content">
             <ul class="employee-content">
                 <li class="employee-content-item">ID: {{ id }}</li>
-                <li class="employee-content-item">Email: <a href="mailto:{{ email }}"></a>{{ email }}</li>
+                <li class="employee-content-item">Email: <a href="mailto:{{ email }}">{{ email }}</a></li>
                 <li class="employee-content-item">GitHub: <a href="https://github.com/{{ github }}" target="_blank" rel="noopener noreferrer">{{ github }}</a></li>
             </ul>
         </div>
