--- a/src/intern.html
+++ b/src/intern.html
@@ -9,7 +9,7 @@
         <div class="card-content">
             <ul class="employee-content">
                 <li class="employee-content-item">ID: {{ id }}</li>
-                <li class="employee-content-item">Email: <a href="mailto:{{ email }}"></a>{{ email }}</li>
+                <li class="employee-content-item">Email: <a href="mailto:{{ email }}">{{ email }}</a></li>
                 <li class="list-group-item">School: {{ school }}</li>
             </ul>
         </div>
